# music-stuff

./: .gitignore  CLAUDE.md  LICENSE  NOTES.md  NOTES.txt  README.md  chatgpt.py  claude.py  console.sh  djay-diff.py  djay.py  essentia-key-cache.csv  essentia.py  key_transitions.py  longest_playlist.csv  pom.xml  pyproject.toml  recs.py  shell.sh  songs-critical-mass-2025-08.csv  songs-critical-mass-halde-copy.csv  songs-critical-mass-next.csv  songs-critical-mass-selection.csv  songs-djay-diff.csv  songs-would-play-and-didnt.csv  songs-would-play.csv  songs-would-play_playlist_v3.csv  songs.csv  songs_combined.csv  songs_longest.csv  songs_spotify.csv  songs_spotify_longest.csv  spotify-csv-to-playlist.py  spotify-mapping.csv  spotify-playlist-add-from-other-playlist.py  spotify-playlist-delete-duplicates.py  spotify-playlist-delete-present-in-other-playlist.py  spotify-playlist-to-csv.py  spotify.py  test_transitions.py  (+2 more)
.claude/: settings.json
.github/: dependabot.yml
data/: lib_essentia_cache.csv  lib_reccobeats_cache.csv  songs-critical-mass-2025-01.csv  songs-critical-mass-2025-03.csv  songs-critical-mass-2025-05.csv  songs-critical-mass-2025-06.csv  songs-critical-mass-2025-07.csv  songs-critical-mass-2025-08.csv  songs-critical-mass-2025-09.csv  songs-critical-mass-2026-03.csv  songs-critical-mass-2026-05.csv  songs-critical-mass-next.csv  songs-critical-mass-played.csv  songs-djay-diff.csv  songs-manual.csv  songs-would-play-and-didnt.csv  songs-would-play.csv  songs-would-play_playlist_v3.csv  spotify-mapping.csv
scripts/: .gitignore  beatunes.py  chatgpt.py  clone-dbs.sh  create-playlist-v2.py  create-playlist-v3.py  djay-diff.py  h2-console.sh  h2-shell.sh  lib_apple_music.py  lib_apple_music_jxa.js  lib_beatunes.py  lib_clonefile.py  lib_djay.py  lib_essentia.py  lib_essentia_cache.csv  lib_transitions.py  playlist-csv.sh  pyproject.toml  songs-djay-diff.csv  spotify-all.sh  spotify-cleanup.sh  spotify-follow-djs.sh  spotify-playlist-add-from-other-playlist.py  spotify-playlist-delete-duplicates.py  spotify-playlist-delete-present-in-other-playlist.py  spotify-playlist-to-csv.py  spotify-radio.sh  spotify-recommended.sh  spotify-weekly.sh  spotify.sh  test_lib_apple_music.py  test_lib_beatunes.py  test_lib_consensus.py  test_lib_djay.py  test_lib_essentia.py  test_lib_spotify.py  test_lib_transitions.py  transitions.py
src/: create-playlist-v1.py  create-playlist-v2.py  djay-diff.py  how-to-get-here.py  lib_consensus.py  lib_djay.py  playlist-csv.py  spotify-csv-to-playlist.py  spotify-playlist-to-csv.py
tests/: test_lib_apple_music.py  test_lib_beatunes.py  test_lib_clonefile.py  test_lib_consensus.py  test_lib_djay.py  test_lib_essentia.py  test_lib_reccobeats.py  test_lib_spotify.py  test_lib_spotify_browser.py  test_lib_transitions.py  test_playlist_builder.py  (+2 more)
(+53 files in other folders)
