[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "music-stuff"
version = "0.1.0"
description = "A dashboard to visualize song relations"
readme = "README.md"
requires-python = "==3.11.15"
dependencies = [
    "dash==3.3.0",
    "matplotlib==3.10.8",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "pandas==2.3.3",
    "plotly==6.5.0",
    "pulp==3.3.0",
    "pyvis==0.3.2",
    "scikit-learn==1.8.0",
    "spotipy==2.25.2",
    "essentia==2.1b6.dev1389",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
]
