[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "music-stuff"
version = "0.1.0"
description = "A dashboard to visualize song relations"
readme = "README.md"
requires-python = "==3.11.15"
dependencies = [
    "dash==4.0.0",
    "matplotlib==3.10.8",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "plotly==6.6.0",
    "pulp==3.3.0",
    "pyvis==0.3.2",
    "scikit-learn==1.8.0",
    "spotipy==2.26.0",
    "essentia==2.1b6.dev1389",
    "prompt-toolkit==3.0.52",
    "miniaudio==1.61",
]

[project.scripts]
playlist-csv = "music_stuff.playlist_csv:main"
create-playlist-v1 = "music_stuff.create_playlist_v1:main"
create-playlist-v2 = "music_stuff.create_playlist_v2:main"
create-playlist-v3 = "music_stuff.create_playlist_v3:main"
djay-diff = "music_stuff.djay_diff:main"
djay-export-blobs = "music_stuff.djay_export_blobs:main"
candidates-next = "music_stuff.candidates_next:main"
candidates-previous = "music_stuff.candidates_previous:main"
candidates-same = "music_stuff.candidates_same:main"
spotify-playlist-add-from-other-playlist = "music_stuff.spotify_playlist_add_from_other_playlist:main"
spotify-playlist-delete-duplicates = "music_stuff.spotify_playlist_delete_duplicates:main"
spotify-playlist-delete-present-in-other-playlist = "music_stuff.spotify_playlist_delete_present_in_other_playlist:main"
spotify-playlist-to-csv = "music_stuff.spotify_playlist_to_csv:main"
spotify-csv-to-playlist = "music_stuff.spotify_csv_to_playlist:main"
playlist-builder = "music_stuff.playlist_builder:main"

[dependency-groups]
dev = [
    "pytest==9.0.2",
]
